Add JSpecify and some Sonar Cleanups (#463)